To do: focal for multi-layer objects

--- Development version
previous version introduced major bug: multilayer files of the 'raster' format have a corrupt header file (reported by Jonathan Greenberg)
new option 'tmptime' to set after how many hours temp files may be deleted. Suggested by Shannon Albeke

--- 17-June-2012, version 2.0-04
More support for factors and (related) Raster Attribute Tables (functions ratify, deratify)
z-values are saved to file (native format only)
Old slot @zvalue removed (in favor of slot @z)
New function 'names' to (eventually) replace 'layerNames', for compatibility with sp.
New function 'proj4string' (equivalent to 'projection') for compatibility with sp.
New function 'sampleStratified'
Improved speed for creating a RasterStack from a list of RasterLayer objects (thanks to report by Jonathan Kennel), and for rasterToPoints
setValues(brick, values) now also works if the existing values (on disk) cannot be all loaded into memory (suggested by Jonathan Greenberg).
bug fixes: 
rasterize with polygons ignores the 'field' argument (bug introduced in previous version)
log failed when writing to disk (reported by Jochen Albrecht)
sampleRegular failed in some cases for a RasterStack (affecting spplot). Reported by Matthew Landis)


--- 1-May-2012, version 1.9-82
New features, improvements:
New function weighted.mean 
New function layerStats to compute the correlation, covariance and weighted covariance matrix across layers (by Jonathan Greenberg)
crosstab can now also process multi-layer objects, suggested by Neil Best
Improved speed of getValuesBlock for RasterBrick using suggestion by Stefan Schlaffer
print method for Spatial* objects similar to that for Raster* objects

bug fixes:
'overlay' ignored the writeRaster arguments. Reported by Oliver Soong
The 'buffer' argument in extract (with points) was lost in the previous version. It has been restored. 
In extract with polygons failed with "getCover=TRUE". Reported by Ariel Ortiz-Bobea