@@ -1,7 +1,9 @@
 To do: focal for multi-layer objects
 
 --- Development version
-previous version introduced major bug: multilayer files of the 'raster' format have a corrupt header file (reported by Jonathan Greenberg)
+bug fixes (both introduced in version 2.0-04):
+multilayer files of the 'raster' format have a corrupt header file (reported by Jonathan Greenberg)
+subset with a RasterBrick fails because of an error when accessing the z slot (reported by Matt Fischer)
 new option 'tmptime' to set after how many hours temp files may be deleted. Suggested by Shannon Albeke
 
 --- 17-June-2012, version 2.0-04
